<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/title_home" />
    
    <item
        android:id="@+id/liveAssistFragment"
        android:icon="@android:drawable/ic_media_play"
        android:title="@string/title_live_assist" />
    
    <item
        android:id="@+id/puppetScanFragment"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/title_puppet_scan" />
        
    <item
        android:id="@+id/artistConnectFragment"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/title_artist_connect" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/title_profile" />
</menu>
